# qim3d

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  stuff.py  temp.har  testing_precommits.py
docs/: cli.md  datahandling.md  features.md  generate.md  gui.md  index.html  index.md  io.md  models.md  processing.md  qim3d.html  releases.md  search.js  utils.md  version_history.md  viz.md
docs/notebooks/: Logging.ipynb  README.md  References from DOI.ipynb  UNet.ipynb  Unet.ipynb  Unet2D.ipynb  Unet_condensed.ipynb  Untitled.ipynb  annotation_tool.ipynb  blob_detection.ipynb  deep_learning_segmentation.ipynb  doi_references.ipynb  features.ipynb  filters.ipynb  local_thickness.ipynb  notebooks.md  ome_zarr.ipynb  segmentation.ipynb  segmentation_pipeline.ipynb  segmentation_pipeline_3D.ipynb  segmentation_pipeline_slices.ipynb  structure_tensor.ipynb  test_memmap.ipynb  warping.ipynb
docs/qim3d/: gui.html  io.html  tools.html
docs/stylesheets/: extra.css
img_examples/: blobs_256x256.tif
qim/: __init__.py
qim/css/: gradio.css
qim/gui/: __init__.py  data_explorer.py  dataexplorer.py  iso3d.py  local_thickness.py
qim/io/: load.py  save.py
qim3d/: __init__.py  cli.py
qim3d/cli/: __init__.py
qim3d/css/: annotation_tool.css  gradio.css
qim3d/detection/: __init__.py  _common_detection_methods.py
qim3d/examples/: NT_128x128x128.tif  __init__.py
qim3d/features/: __init__.py  _common_features_methods.py
qim3d/filters/: __init__.py  _common_filter_methods.py
qim3d/generate/: __init__.py  _aggregators.py  _generators.py  blob_.py  collection_.py
qim3d/gui/: __init__.py  annotation_tool.py  data_explorer.py  interface.py  iso3d.py  layers2d.py  local_thickness.py  qim_theme.py
qim3d/img_examples/: NT_10x200x100.tif  bone_128x128x128.tif  cement_128x128x128.tif  shell_225x128x128.tif
qim3d/io/: __init__.py  _convert.py  _downloader.py  _loading.py  _ome_zarr.py  _saving.py  _sync.py  convert.py  downloader.py  load.py  loading.py  logger.py  ome_zarr.py  save.py  saving.py  sync.py
qim3d/mesh/: __init__.py  _common_mesh_methods.py
qim3d/ml/: __init__.py  _augmentations.py  _data.py  _ml_utils.py
qim3d/models/: __init__.py  data.py  models.py  unet.py
qim3d/operations/: __init__.py  _common_operations_methods.py
qim3d/process/: __init__.py  layers2d.py
qim3d/processing/: __init__.py  _layers.py  _local_thickness.py  _structure_tensor.py  cc.py  detection.py  features.py  filters.py  layers2d.py  local_thickness.py  local_thickness_.py  mesh.py  operations.py  structure_tensor.py  structure_tensor_.py
qim3d/segmentation/: __init__.py  _common_segmentation_methods.py  _connected_components.py
qim3d/tests/: __init__.py
qim3d/tools/: __init__.py  internal_tools.py
qim3d/utils/: 3d_connected_components.py  __init__.py  _cli.py  _doi.py  _logger.py  _misc.py  _ome_zarr.py  _progress_bar.py  _server.py  _system.py  augmentations.py  cc.py  cli.py  connected_components.py  data.py  doi.py  img.py  internal_tools.py  loading_progress_bar.py  misc.py  models.py  ome_zarr.py  progress_bar.py  server.py  system.py  watershed.py
qim3d/viz/: Untitled.ipynb  __init__.py  _cc.py  _data_exploration.py  _detection.py  _k3d.py  _layers2d.py  _local_thickness.py  _metrics.py  cc.py  (+12 more)
(+60 files in other folders)
